# A_Maze_ing

./: Makefile  README.md  a_maze_ing.py  config.txt  config2.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml
src/: algo.py  cell.py  config.txt  intro_animation.py  main.py  maze.txt  mazegen_algo.py  mazeparser.py  new_maze_visualizer.py  option_menu.py  output_file.py  settings.py  solve_maze_algo.py  start.py  visualize_maze.py
src/mazegen/: __init__.py  cell.py  mazegen_algo.py
